Update index.html to remove third image

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="image-container">
                 <img src="images/sandal1.jpg" alt="Artistic Sandal 1">
                 <img src="images/sandal2.jpg" alt="Artistic Sandal 2">
-                <img src="images/sandal3.jpg" alt="Artistic Sandal 3">
-                <!-- More images as needed -->
+                <!-- <img src="images/sandal3.jpg" alt="Artistic Sandal 3">
+                 More images as needed -->
             </div>
         </section>
 
